--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -18,8 +20,12 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.2",
+    "mongoose": "^7.6.5",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^14.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
